--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ body {
 }
 
 .promo-code input {
-    flex-grow: 1;
+    flex-basis: auto;
+    width: 100%;
     padding: 9px 12px;
     border-radius: 5px 0 0 5px;
     border: 1px solid #ced4da;
@@ -158,6 +159,7 @@ body {
     background: #6c757d;
     font-size: 16px;
     cursor: pointer;
+    padding: 0 .7rem;
 }
 
 .promo-code button:focus {
